<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnUygulama10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uyg10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUygulama9"
        app:layout_constraintVertical_bias="0.104" />

    <Button
        android:id="@+id/btnUygulama3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uyg3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.028" />

    <Button
        android:id="@+id/btnUygulama4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uyg4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUygulama3"
        app:layout_constraintVertical_bias="0.03" />

    <Button
        android:id="@+id/btnUygulama5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uyg5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUygulama4"
        app:layout_constraintVertical_bias="0.03" />

    <Button
        android:id="@+id/btnUygulama8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uyg8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUygulama5"
        app:layout_constraintVertical_bias="0.038" />

    <Button
        android:id="@+id/btnUygulama9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uyg9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUygulama8"
        app:layout_constraintVertical_bias="0.062" />
</androidx.constraintlayout.widget.ConstraintLayout>